# dear-style

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.example.yml  docker-compose.yml
android/: ANDROID_SPEC.md  README.md  settings.gradle.kts
backend/: .env.example  BACKEND_SPEC.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation_users_consents.py
backend/app/: main.py
backend/app/auth/: dependencies.py  router.py  schemas.py
backend/app/consents/: models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  errors.py  security.py
backend/app/users/: models.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_and_consents.py
docs/: AI_PIPELINE.md  API_SPEC.md  BEAUTY_GRAPH.md  DATABASE_SCHEMA.md  DESIGN_SYSTEM.md  DOMAIN_MODEL.md  EDUCATION_SYSTEM.md  FUTURE_CAPABILITIES.md  IMPLEMENTATION_NOTES.md  MOBILE_SPEC.md  ONTOLOGY.md  PIVOT_DECISION.md  PRIVACY_AND_SAFETY.md  PRODUCT_REQUIREMENTS.md  README.md  RECOMMENDATION_ENGINE.md  ROADMAP.md  SYSTEM_ARCHITECTURE.md  UI_CSS_TOKEN.md  UI_UX_SPEC.md  VISION.md
ios/: IOS_SPEC.md  README.md
shared/: README.md  TRACE_SCORING_SPEC.md
tasks/: PHASE_01.md  PHASE_01_FOUNDATION.md  PHASE_02.md  PHASE_02_COLOR_TEST.md  PHASE_03.md  PHASE_03_FRIEND_REVIEW.md  PHASE_04.md  PHASE_04_STYLE_SIMULATION.md  PHASE_05.md  PHASE_05_PRODUCT_MATCHING.md  PHASE_06.md  PHASE_06_EDUCATION.md  PHASE_07.md  PHASE_07_IMPRESSION_ENGINE.md  PHASE_08.md  PHASE_08_PRODUCT_RECOMMENDATION.md  (+4 more)
(+71 files in other folders)
